# wabot-rs

./: .gitignore  Cargo.toml  README.md  config-template.toml
src/: lib.rs  main.rs
src/botmods/: errors.rs  general.rs  logging.rs  markup.rs  math.rs  mod.rs  utils.rs  wolfram.rs
