[package]
name = "wabot"
version = "0.6.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resvg = "0.14.1"
usvg = "0.14.1"
tempfile = "3.2.0"
tiny-skia = "0.5.1"
png = "*"
fancy-regex = "0.6.0"
regex = "1.5.4"
config = "0.11.0"
lazy_static = "1.4.0"
reqwest = "0.11.3"
serde = "1.0.126"
serde_json = "1.0"
urlencoding = "2.1.0"

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend", "unstable_discord_api"]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
